--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.3",
@@ -17,12 +18,14 @@
     "@mui/x-data-grid": "^5.6.1",
     "axios": "^0.26.0",
     "chart.js": "^3.7.1",
+    "date-fns": "^2.28.0",
     "install": "^0.13.0",
     "moment": "^2.29.1",
     "qrcode.react": "^3.0.2",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-qr-code": "^2.0.3",
     "react-qr-reader": "^2.2.1",
